fixed the information about footer and align tags p in the services to justify

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,10 @@ body {
     margin: 0 2%;
 }
 
+.accordion-body p {
+    text-align: justify;
+}
+
 /* --------------------------------------------------------------------------------------- */
 /* clientes */
 .cli {
